# talking

./: package.json
backend/: .env  README.md  pyproject.toml
backend/app/: main.py
backend/app/agent/: agent.py  prompt.py
backend/app/routes/: __init__.py  agent_routes.py
frontend/: package-lock.json  package.json
frontend/public/: pcm16-processor.js
frontend/src/app/: page.tsx  providers.tsx
frontend/src/components/: app-sidebar.tsx  team-switcher.tsx
frontend/src/components/therapy/: voice-chat.tsx
frontend/src/lib/db/: client.ts
frontend/src/types/: users.ts
src/app/: page.tsx
src/app/sign-in/: page.tsx
src/components/: nav-main.tsx  nav-user.tsx
src/config/: auth.ts
src/types/: users.ts
